Progress to live

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -20,7 +20,7 @@
         <th>Price</th>
         <th>Date</th>
         <th>Rating</th>
-        <th><button class="btn btn-success" (click)="ToggleImage()">Show Images</button></th>        
+        <th><button class="btn btn-success" (click)="ToggleImage()">{{showImage?"Hide Image":"Show Image"}}</button></th>        
       </tr>
     </thead>
     <tbody>
