--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,7 +12,14 @@
 <body>
 
 <div class="container">
+    <div class="form-group row">       
+        <div class="col-xs-3">
+          <label for="ex2">Filter:</label>
+          <input class="form-control" type="text" [(ngModel)]="filterValue"  />
+        </div>        
+    </div>
   <h2>{{title}}</h2>
+  <h5> This is filter value: {{filterValue}}</h5>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -20,15 +27,17 @@
         <th>Price</th>
         <th>Date</th>
         <th>Rating</th>
+        <th>Description</th>
         <th><button class="btn btn-success" (click)="ToggleImage()">{{showImage?"Hide Image":"Show Image"}}</button></th>        
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let product of products">
-        <td>{{product.Name}}</td>
-        <td>{{product.Price}}</td>
-        <td>{{product.date}}</td>
+        <td>{{product.Name | uppercase }}</td>
+        <td>{{product.Price | currency:"₹" }}</td>
+        <td>{{product.date | date:"MM/dd/yy"}}</td>
         <td>{{product.rating}}</td>
+        <td>{{product.desc | Productsdesc}}</td>
         <td><img [src]="product.img" *ngIf="showImage" /></td>
       </tr>     
     </tbody>
