--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -21,7 +21,9 @@
         </div>        
     </div>
   <h2>{{title}}</h2>
-  <h5> This is filter value: {{filterValue}}</h5>
+  <h5> This is filter value: {{filterValue}} No:
+    {{(products | ProductSearchPipe:filterValue).length}}
+  </h5>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -33,17 +35,26 @@
         <th><button class="btn btn-success" (click)="ToggleImage()">{{showImage?"Hide Image":"Show Image"}}</button></th>        
       </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="products && products.length; else noData">
       <tr *ngFor="let product of products | ProductSearchPipe:filterValue">
         <td>{{product.Name | uppercase }}</td>
-        <td>{{product.Price | currency:"₹" }}</td>
+        <td [ngStyle]="{'background-color': product.Price>5000?'green':'red'}">
+        {{product.Price | currency:"₹" }}</td>
         <td>{{product.date | date:"MM/dd/yy"}}</td>
         <td>{{product.rating}}</td>
         <td>{{product.desc | Productsdesc}}</td>
-        <td><img [src]="product.img" *ngIf="showImage" /></td>
+        <td><img [src]="product.img" *ngIf="showImage"/></td>
       </tr>     
     </tbody>
+    <ng-template #noData>
+      <tbody>
+        <tr>
+          <td><h3>No data available</h3></td>
+        </tr>
+      </tbody>
+    </ng-template>    
   </table>
+  
 </div>
 
 </body>
