learning about browser to server sending data and service started

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -41,7 +41,7 @@
         {{product.Price | currency:"₹" }}</td>
         <td>{{product.date | date:"MM/dd/yy"}}</td>
         <td>
-          <app-star [rating] = "product.rating"></app-star>
+          <app-star [rating] = "product.rating" (ratingClicked)="onDataRecive($event)"></app-star>
         </td>
         <td>{{product.desc | Productsdesc}}</td>
         <td><img [src]="product.img" *ngIf="showImage"/></td>
