--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -55,6 +55,10 @@
       </tbody>
     </ng-template>    
   </table>
+
+  <div class="row">       
+   <app-app_products></app-app_products>        
+  </div>
   
 </div>
 
