my local changes

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -50,7 +50,7 @@
     <ng-template #noData>
       <tbody>
         <tr>
-          <td><h3>No data available</h3></td>
+          <td><img src ="../../assets/ajax-loader.gif" /></td>
         </tr>
       </tbody>
     </ng-template>    
